force-app/src/objects/TR1__Contact_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>TR1__AssessmentID__c</fullName>
        <externalId>true</externalId>
        <label>Assessment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Assessment_Name__c</fullName>
        <label>Assessment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Assessment_Type__c</fullName>
        <label>Assessment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Assessment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contact Assessment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__DateFinished__c</fullName>
        <label>Date Finished</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DateSent__c</fullName>
        <label>Date Sent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__DateStarted__c</fullName>
        <label>Date Started</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__OverallComprehension__c</fullName>
        <label>Overall Comprehension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__OverallFrequency__c</fullName>
        <label>Overall Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Request_Id__c</fullName>
        <externalId>true</externalId>
        <label>Request ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Result_URL__c</fullName>
        <label>Result URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__TotalCorrect__c</fullName>
        <label>Total Correct</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TotalQuestions__c</fullName>
        <label>Total Questions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TotalTime__c</fullName>
        <label>Total Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Assessment</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA{YY}{MM}-{0000}</displayFormat>
        <label>Contact Assessment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>